--- a/snake_curser.html
+++ b/snake_curser.html
@@ -86,6 +86,84 @@
     <div class="curser"></div>
     <div class="curser"></div>
     <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
+    <div class="curser"></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
   <script src="snake.js"></script>
